--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,7 @@
 ---
-
+import Layout from "../layouts/Layout.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Marc Flaquer i Solà</title>
-	</head>
-	<body>
-	</body>
-</html>
+<Layout>
+
+</Layout>
