add image stretch effect component with animation and styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
+import ImageStretchEffect from "../components/ImgStretchEffect/ImgStretchEffect";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-
+    <ImageStretchEffect client:load />
 </Layout>
