--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,8 +8,27 @@
     justify-content: space-between;
 }
 
-.navigation {
+.nav {
     display: flex;
     align-items: center;
     gap: var(--padding-x);
+}
+
+.nav a {
+    position: relative;
+}
+
+.nav a::after {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 0;
+    height: 1px;
+    background-color: var(--black);
+    transition: width 0.3s ease;
+}
+
+.nav a:hover::after {
+    width: 100%;
 }
