add gallery component and images; update styles for header and image stretch effect

--- a/src/components/ThemeButton/ThemeButton.astro
+++ b/src/components/ThemeButton/ThemeButton.astro
@@ -12,11 +12,13 @@
     position: fixed;
     bottom: var(--padding-y);
     left: var(--padding-x);
-    background-color: var(--black);
+    background-color: var(--white);
+    mix-blend-mode: difference;
     transition: background-color 0.5s ease;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 100;
   }
 </style>
 
