--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 100;
+    color: var(--white);
+    mix-blend-mode: difference;
 }
 
 .nav {
@@ -25,7 +28,7 @@
     left: 0;
     width: 0;
     height: 1px;
-    background-color: var(--black);
+    background-color: var(--white);
     transition: width 0.3s ease;
 }
 
