--- a/src/components/ImgStretchEffect/img-stretch-effect.css
+++ b/src/components/ImgStretchEffect/img-stretch-effect.css
@@ -1,8 +1,9 @@
 .image-stretch-wrapper {
   position: relative;
-  width: 100%;
-  height: 80vh;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
+  z-index: 1;
 }
 
 .image-stretch-canvas {
@@ -10,10 +11,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
-  max-width: 100%;
-  max-height: 100%;
+  width: auto;
+  height: 80%;
+  max-width: 80%; 
   object-fit: cover;
-
   cursor: pointer;
 }
