feat: add 404 page and update layout structure for existing pages

--- a/src/components/ThemeButton/ThemeButton.astro
+++ b/src/components/ThemeButton/ThemeButton.astro
@@ -12,8 +12,7 @@
     position: fixed;
     bottom: var(--padding-y);
     left: var(--padding-x);
-    background-color: var(--white);
-    mix-blend-mode: difference;
+    background-color: var(--black);
     transition: background-color 0.5s ease;
     display: flex;
     align-items: center;
