--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,8 +7,6 @@
     align-items: center;
     justify-content: space-between;
     z-index: 100;
-    color: var(--white);
-    mix-blend-mode: difference;
 }
 
 .nav {
@@ -28,7 +26,7 @@
     left: 0;
     width: 0;
     height: 1px;
-    background-color: var(--white);
+    background-color: var(--black);
     transition: width 0.3s ease;
 }
 
