--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,18 +9,18 @@ const images = [
     "/img/01_250TR.webp",
     "/img/01_AutoStorica-1.webp",
     "/img/01_Tucson.webp",
-    "/img/01_BMW R18.webp",
+    "/img/01_BMW-R18.webp",
     "/img/01_Clandestina.webp",
-    "/img/01_Festival Velocidad.webp",
+    "/img/01_Festival-Velocidad.webp",
     "/img/01_AutoStorica-2.webp",
     "/img/01_Chef.webp",
     "/img/01_Nuvolari1.webp",
-    "/img/01_Classic racing.webp",
+    "/img/01_Classic-racing.webp",
     "/img/01_Nuvolari2.webp",
     "/img/01_GPAndorra.webp",
-    "/img/01_GT2RS One.webp",
+    "/img/01_GT2RS-One.webp",
     "/img/01_Bike.webp",
-    "/img/01_Espiritu Montjuic.webp",
+    "/img/01_Espiritu-Montjuic.webp",
     "/img/01_Trackrat.webp",
     "/img/01_AC-Cobra.webp",
     "/img/01_Rallycars.webp"
